--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
@@ -315,12 +315,13 @@
                 <div *ngFor="let columnName of columnsNames; let e =  index"
                     style="display: flex;align-items: center;justify-content: center;"
                     [ngClass]="(columnName.includes('Comments') == true)?'red':'blue'"
-                    [style.padding]="bmxItem.componentSettings[0].rowHeight" [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px': 
-                (columnName == 'RATE')?bmxItem.componentSettings[0].rateWidth + 'px':
-                (columnName == 'nameCandidates')?bmxItem.componentSettings[0].nameCandidatesWidth + 'px':
-                (columnName.includes('Comments'))?bmxItem.componentSettings[0].commentsWidth + 'px':
-                (columnName.includes('RadioColumn'))?bmxItem.componentSettings[0].radioColumnsWidth + 'px' :
-                bmxItem.componentSettings[0].columnWidth + 'px'">
+                    [style.padding]="bmxItem.componentSettings[0].rowHeight + 'px'"
+                    [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px': 
+                     (columnName == 'RATE')?bmxItem.componentSettings[0].rateWidth + 'px':
+                     (columnName == 'nameCandidates')?bmxItem.componentSettings[0].nameCandidatesWidth + 'px':
+                     (columnName.includes('Comments'))?bmxItem.componentSettings[0].commentsWidth + 'px':
+                     (columnName.includes('RadioColumn'))?bmxItem.componentSettings[0].radioColumnsWidth + 'px' :
+                     bmxItem.componentSettings[0].columnWidth + 'px'">
 
 
                     <div *ngIf="(y == 0)" class="header-title" (mouseenter)="selectedColumn = e"
