--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
@@ -398,7 +398,8 @@
                               columnName.includes('ratio') != true"
                             [style.font-size]=" (columnName.includes('name') == true)?'27px':'20px'"
                             [style.color]="(columnName.includes('name') == true)?'#324395':'#bababa'"
-                            style="text-align: center;padding: 10px 4px;">{{testName[columnName]}}</p>
+                            style="text-align: center;padding: 10px 4px;"
+                            [innerHTML]="testName[columnName] | safe: 'html'">{{testName[columnName]}}</p>
 
                         <p *ngIf="y !== 0  && !editSingleTableCells && (columnName.includes('options') != true) &&
                               columnName.includes('Comments') != true && selectedCard == y &&
