report gerator code review, need lots of changes to work with the new tables implementations

--- a/src/app/bsr-mobile/bsr-mobile.component.html
+++ b/src/app/bsr-mobile/bsr-mobile.component.html
@@ -191,7 +191,6 @@
 
        <!-- //COVGOZE, DYZPELVID, ジズペルビド , EQMANI, BETACOZ, COVGOZE, DYZPELVID , -->
         <!-- EMOJIES  -->
-ジズペルビド ,,😕MaybeName,❤️ MyFavoriteName,🐣 ANONYMOUS_NAME,COVID-256👾,COVI 😷-19,🤯ASPIRINA,[̲̅ə̲̅٨̲̅٥̲̅٦̲̅,🩸Dropping,⋆⋆⃟⊱✪⃝⃞⃝⊰⋆⃟⋆⋆ ◤,🏃‍♂️三三☲=💨,ı̴̴̡̡̡ ̡͌l̡̡̡ ̡͌l̡*̡̡ ̴̡ı̴̴̡ ̡̡͡|̲̲̲͡͡͡ ̲▫̲͡ ̲̲̲͡͡π̲̲͡͡ ̲̲͡▫̲̲͡͡ ̲|̡̡̡ ̡ ̴̡ı̴̡̡ ̡͌l̡̡̡̡._2, -->
 
         <div *ngIf="isEmojiTime mat-elevation-z4" cdkDrag class="test-emoji">
             <div class="example-handle" cdkDragHandle>
@@ -282,7 +281,7 @@
                     🐓🐓🥚 ══► 🍳 [̲̅$̲̅(̲̅10)̲̅$̲̅] ｍ（｡≧ _ ≦｡）ｍ Ꮹꄲꄲძ ℳꄲᖇᘉɪ̊ᘉ꒸.͙✼̥୭⁺ ◙▒◙♫♩♬ (ó﹏ò｡) 🌷 ꒐꓄'ꇙ ꇙꉣꋪ꒐ꋊꍌ 🌷
                 </mat-tab>
             </mat-tab-group>
-        </div> -->
+        </div> 
 
     </div>
 </div>
