--- a/src/app/bsr-mobile/bsr-mobile.component.html
+++ b/src/app/bsr-mobile/bsr-mobile.component.html
@@ -16,7 +16,7 @@
         <div class="col container">
 
 
-            <div *ngIf="!isUserLogged && !isUserLeaving" id="login">
+            <div *ngIf="!isUserLogged && !isUserLeaving && !isBSROpen" id="login">
 
                 <div id="login-form-wrapper" fxLayout="column" fxLayoutAlign="center center">
 
@@ -160,7 +160,7 @@
 
 
             <!-- THANK YOU PAGE  -->
-            <div *ngIf="!isUserLogged && isUserLeaving" id="login">
+            <div *ngIf="!isUserLogged && isUserLeaving && !isBSROpen" id="login">
 
                 <div id="login-form-wrapper" fxLayout="column" fxLayoutAlign="center center">
 
@@ -174,6 +174,33 @@
                         </div>
                         <div class="title " style="color: #004684;">
                             To submit additional names, please refresh the page.
+                        </div>
+                        <br>
+
+                        <button mat-mini-fab (click)="reloadpage()" class="refreshbutton" aria-label="icon">
+                            <mat-icon>refresh</mat-icon>
+                        </button>
+
+                    </div>
+
+                </div>
+
+            </div>
+            <!-- BSR CLOSED  -->
+            <div *ngIf="isBSROpen" id="login">
+
+                <div id="login-form-wrapper" fxLayout="column" fxLayoutAlign="center center">
+
+                    <div id="login-form">
+
+                        <img class="logo" src="assets/img/NAMEPAGE_LOGO-01.svg">
+                        <br> <br>
+
+                        <div class="title " style="color: #004684;">
+                            Thank you for using NamePage.
+                        </div>
+                        <div class="title " style="color: #004684;">
+                            The BSR project <br><span style="font-weight: bold;">{{ projectName}}</span><br> has been closed.
                         </div>
                         <br>
 
