--- a/src/app/bmx/bmx-creator/docx-survey/docx-survey.component.html
+++ b/src/app/bmx/bmx-creator/docx-survey/docx-survey.component.html
@@ -1,4 +1,3 @@
-<p>docx-survey works!</p>
 <div style="display: block;width: 100%; max-height: 500px; overflow: auto;">
     <mat-form-field appearance="outline" style="border-radius: 0px">
         <mat-label>Sort By</mat-label>
@@ -45,7 +44,7 @@
     <div>
         <button mat-raised-button style="background-color: #003180;color:white;margin: 5px 20px 0 20px;"
             (click)="report()">
-            Upload Participants
+            Download Report
 
         </button>
     </div>
