nw3 refactoring and organizing code

--- a/src/app/nw3/nw3.component.scss
+++ b/src/app/nw3/nw3.component.scss
@@ -65,7 +65,7 @@
     .testName {
         font-size: 140px;
         margin-top: -138px;
-        color: darkblue;
+        color: #1d1d1d;
         font-size: 150px;
         // text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
         box-shadow: inset inset 0px 0px 5px #c1c1c1;
