--- a/src/app/nw3/nw3.component.html
+++ b/src/app/nw3/nw3.component.html
@@ -1,7 +1,5 @@
 <!-- MAIN CONTENT DIV -->
 <div (click)="noClickanyWhere()" class="page">
-
-
     <div class="mainContainerPresent mat-elevation-z8" [style.background-image]="slideNameBackground">
 
         <!-- <div class="mainContainerPresent mat-elevation-z8" > -->
@@ -44,19 +42,18 @@
 
             <!-- <div class="label" style="width: 250px; text-align: center;">card width</div>
 
-            <input type="range" style="margin: 20px;width: 200px;" class="settingsSlide"
-                (change)="setCardWidth(cardWidthValue)" [(ngModel)]="cardWidthValue" tickInterval="1" min="1" max="100"
-                [value]="cardWidthValue"> -->
+                <input type="range" style="margin: 20px;width: 200px;" class="settingsSlide"
+                    (change)="setCardWidth(cardWidthValue)" [(ngModel)]="cardWidthValue" tickInterval="1" min="1" max="100"
+                    [value]="cardWidthValue"> -->
 
         </div>
         <!--⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️ END SETTINGS BOX ⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️⚙️-->
 
         <!-- <div *ngIf="true" class="settingsBox">
-            <div>Table Of Content</div>
-            <mat-slider  (change)="setFontSize()" [(ngModel)]="groupTestNameFontSize"
-        class="slider-font-size" thumbLabel tickInterval="1" min="20" max="38" [value]="groupTestNameFontSize"></mat-slider>
-        </div> -->
-
+                <div>Table Of Content</div>
+                <mat-slider  (change)="setFontSize()" [(ngModel)]="groupTestNameFontSize"
+            class="slider-font-size" thumbLabel tickInterval="1" min="20" max="38" [value]="groupTestNameFontSize"></mat-slider>
+            </div> -->
 
         <!-- LEFT & RIGHT ICONS -->
         <button (click)="moveRight()" class="menu-left-icon" mat-icon-button>
@@ -67,19 +64,15 @@
             <mat-icon>keyboard_arrow_left</mat-icon>
         </button>
 
-
-
-        <!--  TEMPLATES FOR SLIDES , GROUP NAMES, SINGLE NAME, IMAGE SLIDE ❤️💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔-->
+        <!--  ❤️💔💔💔💔💔💔💔💔💔💔💔💔💔💔 TEMPLATES FOR SLIDES , GROUP NAMES, SINGLE NAME, IMAGE SLIDE 💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔-->
 
         <!-- IMAGE SLIDE  -->
         <div *ngIf="(slideType === 'Image')" class="imagePresentar" [style.background]="slideBackground"></div>
         <!-- {{slideBackground}} -->
 
-        <!-- SUMMARY SLIDE 📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊-->
+        <!-- 📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊 SUMMARY SLIDE  📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊-->
         <div *ngIf="(slideType === 'NameSummary')" class="summaryPresentar summary">
-
             <div class="summaryLabel">Summary</div>
-
             <div class="summaryButtons">
                 <div style="display: flex; flex-direction: row; justify-content: space-between;align-items: center">
                     <button (click)="changeSummaryList('Positive')" mat-raised-button
@@ -157,14 +150,10 @@
 
             </div>
         </div>
-
-        <!--  📊📊📊📊📊📊📊📊 📊📊📊📊📊📊📊📊📊📊📊📊📊📊 END SUMMARY SLIDE-->
+        <!--  📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊 END SUMMARY SLIDE 📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊📊 -->
 
         <!-- SINGLE NAME 💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲-->
-
-
         <!-- isKatakana_BigJap -->
-
         <div *ngIf="(slideType === 'NameEvaluation')">
             <div class="singleNameSlide">
 
@@ -370,15 +359,15 @@
 
             <!-- FAVORITE RANK ALL ICON DEPRECTED-->
             <!-- <button [ngClass]="(isFavoriteOn)?'heart-favorite':'heart-favorite-Off'" mat-icon-button
-                (click)="setAllNamesIcon('favorite', '#ee0278')">
-                <mat-icon class="heart-favorite-icon">favorite</mat-icon>
-            </button>
-            <button class="G1 GG" mat-icon-button (click)="setAllNamesIcon('sentiment_very_satisfied', '#ee7802')">
-                <mat-icon>sentiment_very_satisfied</mat-icon>
-            </button>
-            <button class="G4 GG" mat-icon-button (click)="setAllNamesIcon('thumb_down_off_alt', '#0278ee')">
-                <mat-icon>thumb_down_off_alt</mat-icon>
-            </button> -->
+                    (click)="setAllNamesIcon('favorite', '#ee0278')">
+                    <mat-icon class="heart-favorite-icon">favorite</mat-icon>
+                </button>
+                <button class="G1 GG" mat-icon-button (click)="setAllNamesIcon('sentiment_very_satisfied', '#ee7802')">
+                    <mat-icon>sentiment_very_satisfied</mat-icon>
+                </button>
+                <button class="G4 GG" mat-icon-button (click)="setAllNamesIcon('thumb_down_off_alt', '#0278ee')">
+                    <mat-icon>thumb_down_off_alt</mat-icon>
+                </button> -->
             <!-- FAVORITE RANK ALL ICON -->
             <button [ngClass]="(isFavoriteOn)?'heart-favorite':'heart-favorite-Off'" mat-icon-button
                 (click)="setAllNamesIcon('check', '#09bf06')">
@@ -395,12 +384,12 @@
 
 
             <!-- <button class="G2 GG" mat-icon-button>
-                    C
-                </button>
-        
-                <button class="G3 GG" mat-icon-button >
-                    P
-                </button> -->
+                        C
+                    </button>
+            
+                    <button class="G3 GG" mat-icon-button >
+                        P
+                    </button> -->
         </div>
 
         <!-- INFO SLIDE QR CODE -->
@@ -408,39 +397,33 @@
 
             SLIDE info
         </div>
-
-
-        <!--💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔 💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔 END OF TEMPLATES FOR SLIDES , GROUP NAMES, SINGLE NAME, IMAGE SLIDE -->
-
+        <!--💔💔💔💔💔💔💔💔💔💔💔💔 END OF TEMPLATES FOR SLIDES , GROUP NAMES, SINGLE NAME, IMAGE SLIDE 💔💔💔💔💔💔 💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔💔  -->
     </div>
-
 </div>
 
-
-
-<!--RIGHT SIDE TOOL BAR MENU -->
+<!--🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀 RIGHT SIDE TOOL BAR MENU 🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀-->
+<!-- MENU TOGGLER -->
 <div *ngIf="!mainMenu" class="corner_bar_menu">
     <button *ngIf="false" matTooltip="new post it" matTooltipPosition="above" mat-icon-button color="warn"
         aria-label="aria">
         <mat-icon class="full-icon">note_add</mat-icon>
     </button>
     <!-- <button *ngIf="true" mat-icon-button matTooltip="vote" matTooltipPosition="above" mat-icon-button
-        style="border-radius: 50%; border: 2px solid grey;outline: none;" aria-label="aria">
-        GO
-    </button> -->
+            style="border-radius: 50%; border: 2px solid grey;outline: none;" aria-label="aria">
+            GO
+        </button> -->
     <!-- <button mat-icon-button aria-label="Proprietary" style="width: 200px;">
-      Proprietary & Confidential
-    </button> -->
+        Proprietary & Confidential
+        </button> -->
     <button (click)="toogleMenu()" matTooltip="" matTooltipPosition="above" mat-icon-button color="warn"
         aria-label="aria">
         <mat-icon class="full-icon">menu</mat-icon>
     </button>
     <!-- <button class="goButton" *ngIf="true" mat-icon-button matTooltip="vote" matTooltipPosition="above" mat-icon-button
-        aria-label="aria">
-        GO
-    </button> -->
+            aria-label="aria">
+            GO
+        </button> -->
 </div>
-
 <div *ngIf="mainMenu" class="corner_bar_menu">
     <button mat-icon-button matTooltip="home" matTooltipPosition="left">
         <mat-icon (click)="selectPage('home')" class="full-icon">home</mat-icon>
@@ -473,13 +456,13 @@
         <mat-icon class="full-icon">T</mat-icon>
     </button>
     <!-- <button *ngIf="true" matTooltip="stats" matTooltipPosition="left" mat-icon-button aria-label="aria">
-        <mat-icon class="full-icon">bar_chart</mat-icon>
-    </button>
-    <button *ngIf="true" matTooltip="font size" matTooltipPosition="left" mat-icon-button aria-label="aria">
-        <mat-icon class="full-icon">font_download</mat-icon>
-        <mat-slider #slider *ngIf="false" class="slider-font-size" thumbLabel tickInterval="2" min="20" max="38"
-            [value]="28"></mat-slider>
-    </button> -->
+            <mat-icon class="full-icon">bar_chart</mat-icon>
+        </button>
+        <button *ngIf="true" matTooltip="font size" matTooltipPosition="left" mat-icon-button aria-label="aria">
+            <mat-icon class="full-icon">font_download</mat-icon>
+            <mat-slider #slider *ngIf="false" class="slider-font-size" thumbLabel tickInterval="2" min="20" max="38"
+                [value]="28"></mat-slider>
+        </button> -->
     <button (click)="fontTheme()" *ngIf="true" mat-icon-button matTooltip="toggle theme" matTooltipPosition="left">
         <mat-icon class="full-icon">casino</mat-icon>
     </button>
@@ -499,19 +482,17 @@
         <mat-icon class="full-icon">keyboard_arrow_down</mat-icon>
     </button>
     <!-- <button class="goButton" *ngIf="true" mat-icon-button matTooltip="vote" matTooltipPosition="left"
-            mat-icon-button aria-label="aria">
-            GO
-        </button> -->
+                mat-icon-button aria-label="aria">
+                GO
+            </button> -->
 </div>
-
-
+<!--🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀RIGHT SIDE TOOL BAR MENU🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀 -->
 <!-- QR CODE-->
 <div (click)="noClickanyWhere()" *ngIf="isQRcode" class="qr_code">
     <p style="font-family: sans-serif;font-size: 28px;margin-top: 10px;">scan me</p>
     <qrcode [qrdata]="myAngularxQrCode" [width]="350" [errorCorrectionLevel]="'M'"></qrcode>
     <p><a style="color: black;" target="_blank">{{myAngularxQrCode}}</a></p>
 </div>
-
 <div (click)="noClickanyWhere()" *ngIf="displayNameVoteMobiile" class="info" style="display: flex; flex-direction: row;"
     class="qr_code">
     <div class="text-center flex">
