--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -358,6 +358,16 @@
                         </p>
                         <mat-icon *ngIf="selectedColumn === e && bmxClientPageOverview" style="cursor: pointer;"
                             (click)="swapColumns(e)">chevron_right</mat-icon>
+
+                        <mat-icon *ngIf="selectedColumn === e && bmxClientPageOverview" style="cursor: pointer;"
+                            (click)="columnFontSizeAdjust(columnName, 'decrease')">remove</mat-icon>
+
+                        <mat-icon *ngIf="selectedColumn === e && bmxClientPageOverview" style="cursor: pointer;">
+                            text_format
+                        </mat-icon>
+
+                        <mat-icon *ngIf="selectedColumn === e && bmxClientPageOverview" style="cursor: pointer;"
+                            (click)="columnFontSizeAdjust(columnName, 'increase')">add</mat-icon>
                     </div>
 
                     <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 END HEADER TEXT AREA  🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
